tests/NormalTests/paczka1/fuzzy1/46265511.err
Error in line 2: LjJA9w S670 58,3
Error in line 1: sbLQFw S161 69,5
Error in line 6: sbLQFw A856 13,4
Error in line 11: jjkefEF A856 298,3
Error in line 12: jjkefEF S670 9,2
Error in line 19: W8LrVe1vzg1 S670 10,5
Error in line 15: sbLQFw S161 6,8
Error in line 10: S325 S325 36,4
Error in line 32: W8LrVe1vzg1 S161 0,7
Error in line 38: jjkefEF S670 27,6
